<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lite Currency Converter</string>
    <string name="action_settings">Settings</string>
    <string name="currency1">Currency 1:</string>
    <string name="currency2">Currency 2:</string>
    <string name="currency_title">Pick your currency</string>
	
    <string-array name="currencies_array">
        <item>Euro</item>
        <item>Japanese Yen</item>
        <item>US Dollar</item>
        <item>Bulgarian Lev</item>
        <item>Czech Koruna</item>
        <item>Danish krone</item>
        <item>British Pound</item>
        <item>Hungarian Forint</item>
        <item>Lithuanian Litas</item>
        <item>Polish Złoty</item>
        <item>Romanian Leu</item>
        <item>Swedish Krona</item>
        <item>Swiss Franc</item>
        <item>Norwegian Krone</item>
        <item>Croatian Kuna</item>
        <item>Russian Ruble</item>
        <item>Turkish Lira</item>
        <item>Australian Dollar</item>
        <item>Brazilian real</item>
        <item>Canadian Dollar</item>
        <item>Chinese Yuan</item>
        <item>Hong Kong Dollar</item>
        <item>Indonesian Rupiah</item>
        <item>Israeli New Sheqel</item>
        <item>Indian Rupee</item>
        <item>South Korean won</item>
        <item>Mexican Peso</item>
        <item>Malaysian Ringgit</item>
        <item>New Zealand Dollar</item>
        <item>Philippine Peso</item>
        <item>Singapore Dollar</item>
        <item>Thai Baht</item>
        <item>South African Rand</item>
    </string-array>
    <string name="value">Value:</string>
    <string name="result">Result:</string>
    <string name="Switch">Switch</string>
    <string name="no_connection_warning">Your device is not connected to Internet. Please make sure that you are connected to Internet and restart the app.</string>
    
</resources>
