<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/currencytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/currency_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currency1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:text="@string/currency1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/currency1_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currencytitle"
        android:layout_marginTop="15dip"
        android:layout_toRightOf="@+id/currency1" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBottom="@+id/currency1"
        android:layout_marginLeft="10dip"
        />

    <TextView
        android:id="@+id/currency2"
        android:layout_marginTop="90dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currency1"
        android:layout_below="@+id/currency1_spinner"   
        android:text="@string/currency2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/currency2_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currency1_spinner"
        android:layout_marginTop="75dip"
        android:layout_toRightOf="@+id/currency2" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBottom="@+id/currency2"
        android:layout_marginLeft="10dip" 
        />

    <TextView
        android:id="@+id/value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currency2"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/currency2_spinner"
        android:text="@string/value"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        />

    <EditText
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/value_text"
        android:layout_alignLeft="@+id/currency2_spinner"
        android:layout_alignRight="@+id/currency2_spinner"
        android:ems="10"
        android:inputType="numberDecimal" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value_text"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/currency2_spinner"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/result_text"
        android:layout_alignLeft="@+id/value"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/result_text" />

    <ImageButton
        android:id="@+id/swapcurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currency2_spinner"
        android:layout_below="@+id/currency1_spinner"
        android:layout_marginTop="23dp"
        android:src="@drawable/ic_action_import_export" />
    
</RelativeLayout>
